--- a/projet js/index.html
+++ b/projet js/index.html
@@ -8,6 +8,32 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <h1>
+            JS Project by Mia & Ange
+        </h1>
+    </header>
+
+    <div class="all_project">
+        <div class="citation">
+            <a href="generator.js">générateur de citations</a>
+        </div>
+
+        <div class="to_do">
+            <a href="generator.js">to do list</a>
+        </div>
+
+        <div class="memory">
+            <a href="generator.js">memory</a>
+        </div>
+
+        <div class="group">
+            <a href="generator.js">group maker</a>
+        </div>
+
+        <div class="api">
+            <a href="generator.js">api fetcher</a>
+        </div>
+    </div>
 </body>
 </html>
