--- a/projet js/index.html
+++ b/projet js/index.html
@@ -17,23 +17,23 @@
 
     <div class="all_project">
         <div class="citation">
-            <a href="generator.js">générateur de citations</a>
+            <a href="generator.js" target="_blank">générateur de citations</a>
         </div>
 
         <div class="to_do">
-            <a href="generator.js">to do list</a>
+            <a href="generator.js" target="_blank">to do list</a>
         </div>
 
         <div class="memory">
-            <a href="generator.js">memory</a>
+            <a href="generator.js" target="_blank">memory</a>
         </div>
 
         <div class="group">
-            <a href="generator.js">group maker</a>
+            <a href="generator.js" target="_blank">group maker</a>
         </div>
 
         <div class="api">
-            <a href="generator.js">api fetcher</a>
+            <a href="generator.js" target="_blank">api fetcher</a>
         </div>
     </div>
 </body>
