--- a/projet js/index.html
+++ b/projet js/index.html
@@ -17,19 +17,19 @@
 
     <div class="all_project">
         <div class="citation">
-            <a href="generator.js" target="_blank">générateur de citations</a>
+            <a href="generator.html" target="_blank">générateur de citations</a>
         </div>
 
         <div class="to_do">
-            <a href="generator.js" target="_blank">to do list</a>
+            <a href="todo.html" target="_blank">to do list</a>
         </div>
 
         <div class="memory">
-            <a href="generator.js" target="_blank">memory</a>
+            <a href="memory.html" target="_blank">memory</a>
         </div>
 
         <div class="group">
-            <a href="generator.js" target="_blank">group maker</a>
+            <a href="group.html" target="_blank">group maker</a>
         </div>
 
         <div class="api">
