--- a/projet js/generator.html
+++ b/projet js/generator.html
@@ -13,7 +13,7 @@
 
     <div class="quote_display">
         <!-- générateur de citations -->
-        <button></button>
+        <button onclick="newQuote()">Générer</button>
     </div>
 </body>
 </html>
