--- a/projet js/generator.html
+++ b/projet js/generator.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html>
+  <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="generator.js"></script>
-</head>
-<body>
+    <title>Quotes Generator</title>
+  </head>
+  <body>
+    <h1>Citations du monde</h1>
+    <p id="quote"></p>
+    <button onclick="generateQuote()">Nouvelle citation</button>
     
-</body>
+    <script src="generator.js"></script>
+  </body>
 </html>
