--- a/projet js/generator.html
+++ b/projet js/generator.html
@@ -11,9 +11,13 @@
 <body>
     <h1>Générateur de citations</h1>
 
+
+    <div id="citation">
+    </div>
+
     <div class="quote_display">
         <!-- générateur de citations -->
-        <button onclick="newQuote()">Générer</button>
+        <button onclick="afficherCitation()">Générer</button>
     </div>
 </body>
 </html>
