--- a/projet js/todo.html
+++ b/projet js/todo.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<html>
+  <head>
+    <title>Todo List with Delete Button</title>
+  </head>
+  <body>
+    <h1>To-do list</h1>
+    <input type="text" id="todoInput" placeholder="Nouvelle tâche...">
+    <button onclick="addTodo()">Ajouter</button>
+    <ul id="todoList"></ul>
     <script src="todo.js"></script>
-</head>
-<body>
-    
-</body>
+  </body>
 </html>
