--- a/projet js/todo.html
+++ b/projet js/todo.html
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="todo.js"></script>
+    <script src="todo.js" defer></script>
+
 </head>
+
 <body>
-    <div id="taskList">
-        <ul>
-            <li>Faire les courses</li>
-            <li>Répondre à un e-mail important</li>
-            <li>Appeler le médecin pour prendre un rendez-vous</li>
-        </ul>
-    </div>
-    <form>
-        <label for="newTask">Nouvelle tâche :</label>
-        <input type="text" id="newTask" name="newTask">
-        <button type="button" onclick="addTask()">Ajouter</button>
+    <form id="form">
+        <input autocomplete="off" required id="add" type="text" placeholder="Ajouter une nouvelle tâche">
+        <input type="submit" id="btn"value="+">
     </form>
 
+    <ol id="list"> 
+    </ol>
+
 </body>
+
 </html>
