--- a/projet js/todo.html
+++ b/projet js/todo.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="todo.js" defer></script>
+    <link rel="stylesheet" href="styletodo.css">
 
 </head>
 
@@ -16,8 +17,13 @@
         <input type="submit" id="btn"value="+">
     </form>
 
-    <ol id="list"> 
-    </ol>
+    <div id="noTask">
+        Aucune tâche en cours...
+    </div>
+
+    <ol id="list"></ol>
+
+    
 
 </body>
 
