--- a/projet js/todo.html
+++ b/projet js/todo.html
@@ -12,18 +12,19 @@
 </head>
 
 <body>
-    <form id="form">
-        <input autocomplete="off" required id="add" type="text" placeholder="Ajouter une nouvelle tâche">
-        <input type="submit" id="btn"value="+">
-    </form>
+    <div class="todolist">
+        <form id="form">
+            <input autocomplete="off" required id="add" type="text" placeholder="Ajouter une nouvelle tâche">
+            <input type="submit" id="btn" value="+">
+        </form>
 
-    <div id="noTask">
-        Aucune tâche en cours...
+        <div id="noTask">
+            Aucune tâche en cours...
+        </div>
+
+        <ol id="list"></ol>
+
     </div>
-
-    <ol id="list"></ol>
-
-    
 
 </body>
 
