--- a/projet js/memory.html
+++ b/projet js/memory.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mmemory game</title>
+    <link rel="stylesheet" href="memorystyle.css"/>
     <script src="memory.js"></script>
 </head>
 <body>
+    <div id="game"></div>
     
 </body>
 </html>
