--- a/projet js/generator.html
+++ b/projet js/generator.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Quotes Generator</title>
-  </head>
+
+<head>
+  <meta charset="UTF-8">
+  <title>Quotes Generator</title>
+</head>
 
 
-  <body>
+<body>
 
-    
-    <h1>Citations du monde</h1>
-    
+
+  <h1>Citations du monde</h1>
+  <div class="citations">
     <p id="quote"></p>
-    <button onclick="generateQuote()">Nouvelle citation</button>
-    <link rel="stylesheet" href="generatorstyle.css"/>
-    <script src="generator.js"></script>
-  </body>
+  </div>
+  <button onclick="generateQuote()">Nouvelle citation</button>
+  <link rel="stylesheet" href="generatorstyle.css" />
+  <script src="generator.js"></script>
+</body>
+
 </html>
