--- a/projet js/todo.html
+++ b/projet js/todo.html
@@ -8,22 +8,25 @@
     <title>Document</title>
     <script src="todo.js" defer></script>
     <link rel="stylesheet" href="styletodo.css">
-
 </head>
 
 <body>
+
+    <h1>To do list</h1>
+
     <div class="todolist">
         <form id="form">
-            <input autocomplete="off" required id="add" type="text" placeholder="Ajouter une nouvelle tâche">
-            <input type="submit" id="btn" value="+">
+            <input class="zone" autocomplete="off" required id="add" type="text" placeholder="Ajouter une nouvelle tâche">
+            <input type="submit" id="btn" value="+" >
         </form>
+        <div class="todo">
 
-        <div id="noTask">
-            Aucune tâche en cours...
+            <div id="noTask">
+                Aucune tâche en cours...
+            </div>
+
+            <ol id="list"></ol>
         </div>
-
-        <ol id="list"></ol>
-
     </div>
 
 </body>
