--- a/projet js/index.html
+++ b/projet js/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1>
-            JS Project by Mia & Ange
+            The cool mom's tips
         </h1>
     </header>
 
