modif html group

--- a/projet js/group.html
+++ b/projet js/group.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Group Maker</title>
 	<link rel="stylesheet" type="text/css" href="groupstyle.css">
+    <script src="group.js"></script>
 </head>
 <body>
 	<h1>Générateur de groupes</h1>
@@ -12,6 +16,6 @@
 	<label>Nombre de groupes:</label><br>
 	<input type="number" id="groupCount"><br><br>
 	<div id="output"></div>
-	<script src="group.js"></script>
+	
 </body>
 </html>
