--- a/VE.html
+++ b/VE.html
@@ -1,33 +1,12 @@
 <!DOCTYPE html>
-<html lang="fr">
-
+<html lang="en">
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Memory Game</title>
-
-    <!-- Stylesheet -->
-    <link rel="stylesheet" href="ve.css" />
-
-    <!-- Script -->
-    <script src="ve.js"></script>
-
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
-
-
 <body>
-    <div class="wrapper">
-        <div class="stats-container">
-            <div id="Total-mouvements"></div>
-            <div id="Durée"></div>
-        </div>
-        <div class="game-container"></div>
-        <button id="stop" class="hide">Stop Game</button>
-    </div>
-    <div class="controls-container">
-        <p id="resultat"></p>
-        <button id="start">Commencer le jeu</button>
-    </div>
-
+    
 </body>
-
 </html>
