--- a/projet js/memory.html
+++ b/projet js/memory.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memory game</title>
     <link rel="stylesheet" href="memorystyle.css" />
-    <script src="memory.js"></script>
+    <script src="memory.js" defer></script>
 </head>
 
 <body>
@@ -25,6 +25,7 @@
         <button id="start">Start Game</button>
     </div>
 
+    
 </body>
 
 
