--- a/projet js/generator.html
+++ b/projet js/generator.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Quotes Generator</title>
-</head>
-
+ </head>
 
 <body>
-
-
   <h1>Citations du monde</h1>
   <div class="citations">
     <p id="quote"></p>
@@ -18,5 +15,4 @@
   <link rel="stylesheet" href="generatorstyle.css" />
   <script src="generator.js"></script>
 </body>
-
 </html>
